...
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/avatar" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/places_ic_search" />

...

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/group_list"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bottomBar"
        android:layout_below="@+id/topBar" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
...
